--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
 	],
 	"type": "wordpress-plugin",
 	"require": {
-		"php": ">=5.3.2",
-		"composer/installers": "v1.0.6"
+		"php": ">=5.4.0",
+		"composer/installers": "v1.0.6",
+		"guzzlehttp/guzzle": "5.2.0"
 	},
 	"autoload": {
 		"psr-4" : {
