--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 	"require": {
 		"php": ">=5.4.0",
 		"composer/installers": "v1.0.6",
-		"guzzlehttp/guzzle": "5.2.0"
+		"guzzlehttp/guzzle": "5.2.0",
+		"guzzlehttp/oauth-subscriber": "0.1.*@dev"
 	},
 	"autoload": {
 		"psr-4" : {
