--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"php": ">=5.4.0",
 		"composer/installers": "v1.0.6",
 		"guzzlehttp/guzzle": "5.2.0",
-		"guzzlehttp/oauth-subscriber": "0.1.*@dev",
+		"guzzlehttp/oauth-subscriber": "0.2.0",
 		"facebook/php-sdk-v4" : "4.0.*"
 	},
 	"autoload": {
