--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "gulp-notify": "^1.4.0",
     "gulp-plumber": "^0.6.3",
     "gulp-sass": "^0.7.2",
-    "gulp-uglify": "^1.0.1",
-    "gulp-watch": "^0.6.8"
+    "gulp-uglify": "^1.2.0",
+    "gulp-watch": "^0.6.8",
+    "gulp-util": "^3.0.6"
   }
 }
